--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -636,7 +636,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                             <h4>Step 4: Testing and Quality Assurance</h4>
                         </div>
