--- a/what-is-web-development.html
+++ b/what-is-web-development.html
@@ -565,10 +565,10 @@
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Web development refers to the construction and management of online
-                                            sites and programs known as web apps. It captures all aspects of web
-                                            technology; tools, and techniques that are used in building both the
-                                            interface and back end of Web based solutions that is both usable and
-                                            aesthetically appealing.</p>
+                                    sites and programs known as web apps. It captures all aspects of web
+                                    technology; tools, and techniques that are used in building both the
+                                    interface and back end of Web based solutions that is both usable and
+                                    aesthetically appealing.</p>
                             </div>
                             <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Understanding the Basics of Web Development</h2>
@@ -641,106 +641,110 @@
                                     such as:</p>
                             </div>
 
-                            <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p><b>Front-end Frameworks:</b> React, Angular, and Vue.js are amazing front end
-                                    frameworks, which you can use to generate unique, lively, and pleasing UIs.<br>
 
-                                    <b>Back-end Frameworks:</b> Some of the back end frameworks such as Django, Node.js,
-                                    and Ruby on Rails helps back end developers to develop efficient, faster, and
-                                    trustable web application.<br>
-
-                                </p>
-                            </div>
-
-                            <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h2>The Role of Databases in Web Programming</h2>
-
-                            </div>
-                            <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>The other important part of web programming is databases that allow storing, finding
-                                    and organising information. There is MySQL and PostgreSQL for the simplest use,
-                                    MongoDB for NoSQL and Firebase for the modern front-end development. Maria DB can be
-                                    used for different types of data and for work with large flows of entries and
-                                    different queries.</p>
-                            </div>
-                            <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h2>How Web Programming Impacts User Experience?</h2>
-                            </div>
-                            <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Web usability is an important component of web design because it captures how a user
-                                    engages with a specific website. Due to effective web programming, UX can be
-                                    improved by having multiple layouts to support broad screen resolution, improving
-                                    the performance by having better loading speeds, and providing clear and better
-                                    structures for navigation and accessibility.</p>
-                            </div>
-                            <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4> Challenges in Web Programming</h4>
-                            </div>
-
-                            <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Web programming has its own issues; technological advancement of web technologies,
-                                    Browser compatibility of WebPages and protection from malicious invasions.
-                                    Challenges that developers encounter and have to guarantee that they know about the
-                                    trends, trends and how they can work on them.</p>
-                            </div>
-                            <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4> The Future of Web Programming</h4>
-                            </div>
-
-                            <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>The advancement in web programming is set to grow richer over the coming years with
-                                    more technologies, frameworks, and tools available. Some of the factors behind this
-                                    type of growth include the enhanced need for mobile and cross-browser applications,
-                                    integration of AI and machine learning within developing web applications, data
-                                    protection surges and more emerging technologies.</p>
-                            </div>
-
-                            <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h2>Conclusion</h2>
-
-                            </div>
-                            <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Web development act as an important part of our society because it helps design and
-                                    create interfaces through which we access information and services on the internet.
-                                    The advancement of the web programming remains important for developers and business
-                                    because it can shape the way new websites and application is built for the current
-                                    and upcoming user experience. Digital Minds On tries to follow those trends and
-                                    provide our clients with the most progressive web development services.</p>
-                            </div>
-
-                            <div class="blog__details__social__icon" data-aos="fade-up" data-aos-duration="1500">
-                                <ul>
-                                    <div class="blog__details__share">
-                                        <span>Share Post:</span>
-                                    </div>
-
-                                    <li>
-                                        <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
-                                            target="_blank">
-                                            <i class="icofont-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.instagram.com/digitalmindson/" target="_blank">
-                                            <i class="icofont-instagram"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
-                                                class="icofont-skype"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.linkedin.com/company/digital-minds-on"
-                                            target="_blank">
-                                            <i class="icofont-linkedin"></i>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                            </div>
 
                         </div>
 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p><b>Front-end Frameworks:</b> React, Angular, and Vue.js are amazing front end
+                                frameworks, which you can use to generate unique, lively, and pleasing UIs.<br>
+
+                                <b>Back-end Frameworks:</b> Some of the back end frameworks such as Django, Node.js,
+                                and Ruby on Rails helps back end developers to develop efficient, faster, and
+                                trustable web application.<br>
+
+                            </p>
+                        </div>
+
+                        <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>The Role of Databases in Web Programming</h2>
+
+                        </div>
+                        <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>The other important part of web programming is databases that allow storing, finding
+                                and organising information. There is MySQL and PostgreSQL for the simplest use,
+                                MongoDB for NoSQL and Firebase for the modern front-end development. Maria DB can be
+                                used for different types of data and for work with large flows of entries and
+                                different queries.</p>
+                        </div>
+                        <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>How Web Programming Impacts User Experience?</h2>
+                        </div>
+                        <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Web usability is an important component of web design because it captures how a user
+                                engages with a specific website. Due to effective web programming, UX can be
+                                improved by having multiple layouts to support broad screen resolution, improving
+                                the performance by having better loading speeds, and providing clear and better
+                                structures for navigation and accessibility.</p>
+                        </div>
+                        <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h4> Challenges in Web Programming</h4>
+                        </div>
+
+                        <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Web programming has its own issues; technological advancement of web technologies,
+                                Browser compatibility of WebPages and protection from malicious invasions.
+                                Challenges that developers encounter and have to guarantee that they know about the
+                                trends, trends and how they can work on them.</p>
+                        </div>
+                        <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h4> The Future of Web Programming</h4>
+                        </div>
+
+                        <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>The advancement in web programming is set to grow richer over the coming years with
+                                more technologies, frameworks, and tools available. Some of the factors behind this
+                                type of growth include the enhanced need for mobile and cross-browser applications,
+                                integration of AI and machine learning within developing web applications, data
+                                protection surges and more emerging technologies.</p>
+                        </div>
+
+                        <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>Conclusion</h2>
+
+                        </div>
+                        <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Web development act as an important part of our society because it helps design and
+                                create interfaces through which we access information and services on the internet.
+                                The advancement of the web programming remains important for developers and business
+                                because it can shape the way new websites and application is built for the current
+                                and upcoming user experience. Digital Minds On tries to follow those trends and
+                                provide our clients with the most progressive web development services.</p>
+                        </div>
+
+                        <div class="blog__details__social__icon" data-aos="fade-up" data-aos-duration="1500">
+                            <ul>
+                                <div class="blog__details__share">
+                                    <span>Share Post:</span>
+                                </div>
+
+                                <li>
+                                    <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                        target="_blank">
+                                        <i class="icofont-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                        <i class="icofont-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                            class="icofont-skype"></i></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
+                                        <i class="icofont-linkedin"></i>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
