--- a/team.html
+++ b/team.html
@@ -396,7 +396,7 @@
                                 <div class="team__member__name">
                                     <h6>Mr. Nadeem</h6>
                                     <p style="margin: 0px;">Full Stack Mobile Application Developer</p>
-                                    <p>CTO</p>
+                                    <p>Chief Technology Officer</p>
                                 </div>
                             </div>
                         </div>
@@ -427,7 +427,7 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Awais Ali</h6>
-                                    <p style="margin: 0px;">Senior Php Laravel Developer</p>
+                                    <p style="margin: 0px;">Senior PHP Laravel Developer</p>
                                     <p>Team Lead</p>
 
                                 </div>
@@ -512,16 +512,17 @@
                         </div>
                     </div>
                 </div>
+                <!-- new card -->
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                         data-aos-duration="2500">
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/service/Kashif.png" alt="">
+                                    <img src="assets/img/team/amir.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6>Mr. Kashif</h6>
-                                    <p>Social Media Manager</p>
+                                    <h6>Mr. Amir Khan</h6>
+                                    <p>Full-stack Mobile Application Developer</p>
                                 </div>
                             </div>
                         </div>
@@ -531,16 +532,45 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/awais_ch.png" alt="img">
+                                    <img src="assets/img/team/hanzla.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6>Mr. Awais</h6>
-                                    <p style="margin: 0px;">Digital Marketing</p>
-                                    <p>CTO</p>
+                                    <h6>Mr. Hanzla Shahid</h6>
+                                    <p>Full-stack PHP Developer</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                    data-aos-duration="2500">
+                    <div class="team__member__3__single text-center team__member__border single__transform">
+                        <div class="team__member__3__single__inner" style="height: 385px;">
+                            <div class="team__member__3__img">
+                                <img src="assets/img/service/Kashif.png" alt="">
+                            </div>
+                            <div class="team__member__name">
+                                <h6>Mr. Kashif</h6>
+                                <p>Social Media Manager</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                    data-aos-duration="2100">
+                    <div class="team__member__3__single team__member__border text-center single__transform">
+                        <div class="team__member__3__single__inner" style="height: 385px;">
+                            <div class="team__member__3__img">
+                                <img src="assets/img/team/awais_ch.png" alt="img">
+                            </div>
+                            <div class="team__member__name">
+                                <h6>Mr. Awais</h6>
+                                <p style="margin: 0px;">Digital Marketing</p>
+                                <p>CTO</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                         data-aos-duration="2300">
