--- a/about.html
+++ b/about.html
@@ -489,7 +489,9 @@
                                     </div>
                                     <div class="team__member__name">
                                         <h6>Mr. Nadeem</h6>
-                                        <p>Senior Full Stack Mobile Application Developer</p>
+                                        <p style="margin-bottom: 0px;">Full Stack Mobile Application Developer</p>
+                                        <p>Chief Technology Officer</p>
+
                                     </div>
 
                                 </div>
