--- a/team.html
+++ b/team.html
@@ -566,7 +566,7 @@
                             <div class="team__member__name">
                                 <h6>Mr. Awais</h6>
                                 <p style="margin: 0px;">Digital Marketing</p>
-                                <p>CTO</p>
+                                <p>Team Lead</p>
                             </div>
                         </div>
                     </div>
