specital card design fixed

--- a/index.html
+++ b/index.html
@@ -989,8 +989,8 @@
             data-aos-duration="1500">
             <div class="container">
                 <div class="text-center mb-5">
-                    <h2>Our Areas of Specialties in Revenue Cycle Management</h2>
-                    <p>At MedBrigade, our specialties in Revenue Cycle Management (RCM) encompass a comprehensive range
+                    <h2 style="color: #fff;">Our Areas of Specialties in Revenue Cycle Management</h2>
+                    <p style="color: #fff;">At MedBrigade, our specialties in Revenue Cycle Management (RCM) encompass a comprehensive range
                         of services tailored to meet the diverse needs of healthcare providers.</p>
                 </div>
                 <div class="row g-4">
@@ -1056,9 +1056,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-center mt-5">
+                <!-- <div class="text-center mt-5">
                     <a href="javascript:void(0);" class="default__button">Explore Specialties</a>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- client-section -->
