--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/ahmad _home-owner.png" alt="Hero Banner">
+                                            <img src="assets/img/team/slider/main-1.png" alt="Hero Banner">
                                         </div>
                                     </div>
                                 </div>
@@ -393,7 +393,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/banner_tahir.png" alt="Hero Banner">
+                                            <img src="assets/img/team/slider/main-2.png" alt="Hero Banner">
                                         </div>
                                     </div>
                                 </div>
@@ -422,7 +422,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/nadeem.png" alt="img">
+                                            <img src="assets/img/team/slider/main-3.png" alt="img">
                                         </div>
                                     </div>
                                 </div>
@@ -820,9 +820,11 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h4>Get in Touch with Us</h4>
-                        <p>At Digital minds On, we're here to help you find the right solutions for your business needs.
-                            Whether you have questions about our software, need technical support, or want to discuss a
-                            custom project, our team is ready to assist you.</p>
+                        <p>Digital Minds On holds the conception that all great projects start with a purposeful
+                            conversation . Tell us about your ideas, and our skilled professional will create them come
+                            to life. Whether you need the latest application development, web design and development or
+                            software design and development or any other solution we understand that your business comes
+                            with creativity and technicalities all through the process.</p>
                         <ul class="list-unstyled-2">
                             <li>
                                 <span>
@@ -858,9 +860,6 @@
                                 </span>
                                 <p>Monday - Sunday: 7/24 Hours</p>
                             </li>
-                            <!-- <li class="timeout">
-                                <p> Saturday - Sunday: Closed</p>
-                            </li> -->
                             <li>
                                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -967,16 +966,14 @@
                                 <p>Lahore, Pakistan</p>
                             </li>
                         </ul>
+                        <a class="default__button" href="contact" style="margin-top: 40px;">CONTACT US</a>
                     </div>
+                    <!-- contact form -->
                     <div class="col-md-6">
-                        <!-- contact form -->
-                        <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <div class="service__details__planning__heading">
-                                <h6>Let's discuss your project with us</h6>
-                                <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the
-                                    first step toward creating your product.</p>
-                                <a class="default__button" href="contact">CONTACT US</a>
-                            </div>
+                        <div class="contact__input__wrapper" style="padding: 0px; position: relative; border: none;" data-aos="fade-up" data-aos-duration="2000">
+                            <div class="contact-bg-overlay"></div>
+                            <img src="assets/img/home-service/contact-pic.png" alt="img"
+                                style="width: 100%; border-radius: 20px;">
                         </div>
                         <!-- contact form -->
                     </div>
@@ -990,7 +987,8 @@
             <div class="container">
                 <div class="text-center mb-5">
                     <h2 style="color: #fff;">Our Areas of Specialties in Revenue Cycle Management</h2>
-                    <p style="color: #fff;">At MedBrigade, our specialties in Revenue Cycle Management (RCM) encompass a comprehensive range
+                    <p style="color: #fff;">At MedBrigade, our specialties in Revenue Cycle Management (RCM) encompass a
+                        comprehensive range
                         of services tailored to meet the diverse needs of healthcare providers.</p>
                 </div>
                 <div class="row g-4">
