--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/ahmad _home-owner.png" alt="Hero Banner">
+                                            <img src="assets/img/team/slider/main-1.png" alt="Hero Banner">
                                         </div>
                                     </div>
                                 </div>
@@ -393,7 +393,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/banner_tahir.png" alt="Hero Banner">
+                                            <img src="assets/img/team/slider/main-2.png" alt="Hero Banner">
                                         </div>
                                     </div>
                                 </div>
@@ -422,7 +422,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/nadeem.png" alt="img">
+                                            <img src="assets/img/team/slider/main-3.png" alt="img">
                                         </div>
                                     </div>
                                 </div>
@@ -460,8 +460,8 @@
             <div class="herobanner__icon">
                 <img class="herobanner__vector hero__icon__1" src="assets/img/herobaner/vector__1.png"
                     alt="Vector photo">
-                <img class="herobanner__vector hero__icon__3" src="assets/img/herobaner/vector__3.png"
-                    alt="Vector photo">
+                <!-- <img class="herobanner__vector hero__icon__3" src="assets/img/herobaner/vector__3.png"
+                    alt="Vector photo"> -->
                 <img class="herobanner__vector hero__icon__4" src="assets/img/herobaner/vector__4.png"
                     alt="Vector photo">
             </div>
