--- a/about.html
+++ b/about.html
@@ -357,7 +357,7 @@
                                 <div class="about__vision__wrapper sp_top_60">
                                     <div class="about__number">
                                         <div class="about__number__inner bg__primary">
-                                            <span>29</span>
+                                            <span>03</span>
                                             <p>Years Experience</p>
                                             <div class="about__number__icon">
                                                 <a href="#"> <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
@@ -473,7 +473,7 @@
                                         <h6>Mr. Tahir</h6>
                                         <p style="margin-bottom: 0px;">Senior Principal Software Engineer
                                         </p>
-                                        <p>Co-Founder</p>
+                                        <!-- <p>Co-Founder</p> -->
                                     </div>
 
                                 </div>
