--- a/team.html
+++ b/team.html
@@ -379,7 +379,7 @@
                                     <h6>Mr. Tahir</h6>
                                     <div class="Details">
                                         <p style="margin: 0px;">Principal Software Engineer</p>
-                                        <p>Co-Founder</p>
+                                        <!-- <p>Co-Founder</p> -->
                                     </div>
                                 </div>
                             </div>
