team list change

--- a/about.html
+++ b/about.html
@@ -179,7 +179,8 @@
 
                                             <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
-                                            <li><a href="team">Team </a></li>
+                                            <li><a href="project">Portfolio </a></li>
+                                           
 
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="contact">CONTACT
@@ -187,7 +188,7 @@
                                                 <ul class="headerarea__submenu headerarea__submenu--five--wrap">
 
                                                     <li><a href="about">ABOUT </a></li>
-                                                    <li><a href="project">Portfolio </a></li>
+                                                    <li><a href="team">Team </a></li>
 
                                                 </ul>
 
@@ -759,8 +760,7 @@
 
 
         <!-- blog__section__start -->
-        <div class="blog__3 sp_bottom_200 sp_top_140 special__spacing"
-            style="background: url(img/blog/blog__bg_2.png);">
+        <div class="blog__3 sp_bottom_200 sp_top_140 special__spacing" style="background-image: url(assets/img/blog/blog__bg_2.png);">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12" data-aos="fade-up"
