--- a/error.html
+++ b/error.html
@@ -176,7 +176,8 @@
 
                                             <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
-                                            <li><a href="team">Team </a></li>
+                                            <li><a href="project">Portfolio </a></li>
+                                           
 
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="contact">CONTACT
@@ -184,7 +185,7 @@
                                                 <ul class="headerarea__submenu headerarea__submenu--five--wrap">
 
                                                     <li><a href="about">ABOUT </a></li>
-                                                    <li><a href="project">Portfolio </a></li>
+                                                    <li><a href="team">Team </a></li>
 
                                                 </ul>
 
@@ -296,7 +297,7 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/about/404error.png);">
+        <div class="breadcrumbarea" style="background: url(assets/img/about/404error.png); background-size: cover;">
             <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
@@ -341,7 +342,7 @@
                             <h3> <span class="text__gradient">Lost In The Filed?</span> Let us help you find your way
                                 back.</h3>
                             <div class="error__button">
-                                <a class="default__button" href="javascript:void(0)">SEND MESSAGE</a>
+                                <a class="default__button" href="/">SEND MESSAGE</a>
                             </div>
                         </div>
 
