--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                                                     and Africa , ranging from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">GET A FREE QUOTE</a>
+                                                <a class="default__button" href="contact">Get In Tech</a>
                                             </div>
                                         </div>
                                     </div>
@@ -388,7 +388,7 @@
                                                     from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">GET A FREE QUOTE</a>
+                                                <a class="default__button" href="contact">Get In Tech</a>
                                             </div>
                                         </div>
                                     </div>
@@ -417,7 +417,7 @@
                                                 </p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">GET A FREE QUOTE</a>
+                                                <a class="default__button" href="contact">Get In Tech</a>
                                             </div>
                                         </div>
                                     </div>
